<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/work_sans"
            android:text="@string/app_title"
            android:textColor="@color/HakmarGreen"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/work_sans"
            android:text="@string/welcome_message"
            android:textColor="@color/HakmarGreen"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTitle" />


        <ImageView
            android:id="@+id/circle_logo"
            android:layout_width="152dp"
            android:layout_height="84dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.555"
            app:srcCompat="@drawable/hakmar_logo"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--.android:layout_weight="8" -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        tools:ignore="UselessLeaf">

        <androidx.cardview.widget.CardView
            android:id="@+id/orderListCV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/orders"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:text="@string/menu_item_1"
                    android:textAlignment="center"
                    android:textColor="@color/DarkGray"
                    android:fontFamily="@font/work_sans"

                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/storeListCV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/store"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:text="@string/menu_item_2"
                    android:textAlignment="center"
                    android:fontFamily="@font/work_sans"
                    android:textColor="@color/DarkGray"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>













    </GridLayout>






</LinearLayout>