<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="135dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/orderListCV"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_marginHorizontal="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ordersRowtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/work_sans"
                android:text="@string/orders_row_title_1"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/orderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="104dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/work_sans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ordersRowIV"
                android:layout_width="73dp"
                android:layout_height="71dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.436"
                app:srcCompat="@drawable/approved_or_collecting"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/ordersRowtitle2"
                android:layout_width="77dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="@font/work_sans"
                android:text="@string/orders_row_title_2"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/ordersRowtitle3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ordersRowtitle1" />

            <TextView
                android:id="@+id/ordersRowName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="54dp"
                android:fontFamily="@font/work_sans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ordersRowtitle2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ordersRowtitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/work_sans"
                android:text="@string/order_row_title_3"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ordersRowtitle2" />

            <TextView
                android:id="@+id/dateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/work_sans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ordersRowtitle3" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>